Grid configuration, integrated timers into page_studyaid.py and app optimization

--- a/source/user_settings.json
+++ b/source/user_settings.json
@@ -1,1 +1,6 @@
-
+{
+  "Appearance": "LIGHT",
+  "Notifications": "NONE",
+  "Notifications_Frequency": "NONE",
+  "Class_Organization": "PERIODS"
+}
