--- a/source/config.json
+++ b/source/config.json
@@ -2,7 +2,6 @@
   "Version": "0.1.0",
   "Appearance": "LIGHT",
   "Accent_Color": "green",
-  "Notifications": "NONE",
-  "Notifications_Frequency": "NONE",
-  "Class_Organization": "PERIODS"
+  "SAWIN_SHOW": 1,
+  "SAWIN_AUTOMIN": 0
 }
